# dstools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
rvs/: resource-groups.json  rvs-examples.json
src/dstools/: __init__.py
src/dstools/common/: aio_utils.py  async_iter_utils.py  dummy_logger.py  io_utils.py  iter_utils.py  json_io.py  time_measure.py
src/dstools/common/ext/: typing_ext.py
src/dstools/common/image_utils/: image_io.py  image_pixels.py
src/dstools/compression/: compressor.py  folder_compress.py  snappy_compressor.py
src/dstools/data_manage/: __init__.py  data_manager.py  firestore.py  gcs.py  schema.py
src/dstools/data_manage/collections/: __init__.py  db_collection.py  firestore_collection.py  raw_page_collection_with_content.py
src/dstools/reporting/: reporter.py
src/dstools/resource_management/: resource.py  resource_config.py  resource_utils.py
src/dstools/resource_management/resource_storage/: resource_downloader.py  resource_uploader.py
src/dstools/storage/handlers/: __init__.py  gcs_handler.py  local_handler.py  storage_handler.py  storage_handler_config.py
src/resverman/common/: iter_utils.py  json_io.py  time_measure.py
src/resverman/common/image_utils/: image_io.py  image_validation.py
src/resverman/data_manage/: data_manager.py  firestore.py  gcs.py  schema.py
src/resverman/data_manage/collections/: __init__.py  db_collection.py  (+2 more)
src/resverman/reporting/: reporter.py
src/resverman/resource_management/: resource.py  resource_config.py
(+8 files in other folders)
